--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -73,18 +73,23 @@ a:hover {
     border: 0;
     margin: 20px 0 0;
     padding-bottom: 0;
+
     @include max_tablet {
-        margin: 10px 0 0;
+        margin: 60px 0 0;
     }
-    h1{
-        @include tablet {
-            text-align: right;
-            margin: 30px 0 0 15px;
-        }
+    @include max_phone {
+        margin: 40px 0 0;
     }
     .page-title{
+        @include max_laptop{
+            margin-bottom: 20px;
+        }
         @include max_tablet{
             margin-bottom: 20px;
+            text-align: right;
+        }
+        @include max_phone {
+            text-align: left;
         }
     }
 }
@@ -144,14 +149,6 @@ a:hover {
     .col-sm-6 {
         @include max_tablet{
             padding: 0;
-        }
-    }
-    .page-title {
-        @include max_tablet {
-            text-align: right !important;
-        }
-        @include max_pager {
-            text-align: left !important;
         }
     }
 }
