--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -279,7 +279,7 @@
 .credits {
     overflow-y: hidden;
     overflow-x: hidden;
-    padding-bottom: 5px;
+    padding-bottom: 5px !important;
     
     td {
         padding: 3px !important;
