page-header adjust attempt

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -101,7 +101,7 @@ a:hover {
 }
 .single .page-header {
     @include max_tablet {
-        margin: 0;
+        margin: 0 !important;
     }
 }
 .hentry {
