--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2407,7 +2407,7 @@ a:hover {
 @media only all and (max-width: 767px) {
   /* line 102, ../scss/custom.scss */
   .single .page-header {
-    margin: 0;
+    margin: 0 !important;
   }
 }
 
