--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -2,6 +2,10 @@
  * 	Mixins
  */
 
+%pink_border {
+    border-top: 7px solid $red;
+}
+
 // Helpers
 %removeFocusOutline {
     outline: 0 !important;
